# lagless

P2PConnection/: README.md  receiver.py  requirements.txt  sender.py
ScreenStreamer/: CMakeLists.txt  CaptureManager.cpp  CaptureManager.h  FFmpegEncoder.cpp  FFmpegEncoder.h  UdpSender.cpp  UdpSender.h  build.bat  main.cpp
